# plc-codes

./: LICENSE  README.md  dune-project  interpreter_proj.opam
lib/: ast.ml  big_step_evaluation.ml  dune  lexer.mll  parser.mly  small_step_evaluation.ml  typechecker.ml
test/: dune  standard.out  test_stmt.in
